[package]
name = "http-server-vibeio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.5.0"
bytes = "1.11.1"
futures-util = "0.3.32"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
httparse = "1.10.1"
httpdate = "1.0.3"
memchr = "2.8.0"
oneshot = { version = "0.2.1", features = ["async", "std"] }
send_wrapper = "0.6.0"
smallvec = "1.15.1"
tokio = "1.50.0"
tokio-util = "0.7.18"
vibeio = "0.2.1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["test-util", "full"] }
