[package]
name = "http-server-vibeio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.5.0"
bytes = "1.11.1"
futures-util = "0.3.32"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
oneshot = { version = "0.2.1", features = ["async", "std"] }
tokio = "1.50.0"
vibeio = { version = "0.2.3", default-features = false, features = ["time"] }

# HTTP/1.x
httparse = { version = "1.10.1", optional = true }
httpdate = { version = "1.0.3", optional = true }
memchr = { version = "2.8.0", optional = true }
tokio-util = { version = "0.7.18", optional = true }
send_wrapper = { version = "0.6.0", optional = true }

# HTTP/2
h2 = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["test-util", "full"] }

[features]
default = ["h1", "h1-zerocopy", "h2"]
h1 = ["httparse", "httpdate", "memchr", "tokio-util", "send_wrapper"]
h1-zerocopy = ["h1", "vibeio/splice"]
h2 = ["dep:h2", "httpdate", "tokio-util"]
